Scons: Prefer inline scons, use short path names on Windows
* The absolute paths might bring in characters from unicode, that
  are hard to handle for the Python version used, with short paths
  we avoid the issue entirely.

* The inline copy of scons, ran with the same Python version is
  more robust against PYTHONHOME and PYTHONPATH issues than the
  installed stuff, plus we do some optimization that can benefit
  the startup time, therefore making things faster.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get install scons chrpath
+        sudo apt-get install chrpath
         pip install -r requirements-devel.txt
 
     - name: Install Nuitka
