--- a/debian/control
+++ b/debian/control
@@ -4,15 +4,15 @@ Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
                dh-python | base-files (<< 9.6),
-               python (>= 2.6.6-2),
-               python-all-dbg (>= 2.6.6-2),
-               python-all-dev (>= 2.6.6-2),
-               python-setuptools,
+               python (>= 2.6.6-2) || base-files (>= 11),
+               python-all-dbg (>= 2.6.6-2) || base-files (>= 11),
+               python-all-dev (>= 2.6.6-2) || base-files (>= 11),
+               python-setuptools || base.files (>= 11),
                scons (>= 2.0.0),
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
-               python-appdirs  | base-files (<< 7.2),
+               python-appdirs  | base-files (>= 11),
                python3-appdirs | base-files (<< 7.2),
                strace,
                chrpath,
@@ -30,7 +30,7 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          scons (>= 2.0.0),
          python-appdirs  | base-files (<< 7.2),
          python3-appdirs | base-files (<< 7.2),
-         python-dev (>= 2.6.6-2),
+         python-dev (>= 2.6.6-2) || base-files (>= 11),
          python3-dev,
          ${misc:Depends},
          ${python:Depends},
