--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,16 @@ export PYBUILD_INTERPRETERS = python{version}
 export PYBUILD_VERSIONS = $(shell pyversions -vr) $(shell py3versions -vr)
 
 %:
-	dh $@ --with python2,python3 --buildsystem=pybuild
+	set -x
+
+	# Do not use Python2 for Debian 11 or higher, need to find a way for Ubuntu
+	# to cover.
+	if [ "`lsb_release -r | sed -e s/Release://`" -ge 11 -a "`lsb_release -i| sed -e 's/Distributor ID:.//'`" = "Debian" ]
+	then
+		dh $@ --with python3 --buildsystem=pybuild
+	else
+		dh $@ --with python2,python3 --buildsystem=pybuild
+	fi
 
 override_dh_auto_build:
 	cp Changelog.rst changelog
