--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ export PYBUILD_NAME = nuitka
 # This disables the building with debug Python, not sure why we need to
 # set PYBUILD_VERSIONS too, but it seemed that way.
 export PYBUILD_INTERPRETERS = python{version}
-export PYBUILD_VERSIONS = $(shell pyversions -vr) $(shell py3versions -vr)
+# export PYBUILD_VERSIONS = $(shell pyversions -vr) $(shell py3versions -vr)
 
 %:
 	set -x
