Revert "Debian: Disable creation of PDF documentation"

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Build-Depends: debhelper (>= 9),
                python-all-dbg (>= 2.6.6-2) || base-files (>= 11),
                python-all-dev (>= 2.6.6-2) || base-files (>= 11),
                python-setuptools || base.files (>= 11),
+               rst2pdf (>= 0.14-2),
+               python-pil | python-imaging,
                scons (>= 2.0.0),
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
