--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Maintainer: Kay Hayen <kay.hayen@gmail.com>
 Section: python
 Priority: optional
 Build-Depends: debhelper (>= 9),
+               lsb-release,
                dh-python | base-files (<< 9.6),
                python (>= 2.6.6-2) | base-files (>= 11),
                python-all-dbg (>= 2.6.6-2) | base-files (>= 11),
