--- a/debian/control
+++ b/debian/control
@@ -2,21 +2,22 @@ Source: nuitka
 Maintainer: Kay Hayen <kay.hayen@gmail.com>
 Section: python
 Priority: optional
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper,
                lsb-release,
                dh-python | base-files (<< 9.6),
                python (>= 2.6.6-2) | base-files (>= 11),
                python-all-dbg (>= 2.6.6-2) | base-files (>= 11),
                python-all-dev (>= 2.6.6-2) | base-files (>= 11),
                python-setuptools | base.files (>= 11),
-               scons (>= 2.0.0),
+               scons,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
                python-appdirs  | base-files (>= 11),
                python3-appdirs | base-files (<< 7.2),
-               rst2pdf (>= 0.14-2),
-               python-pil | python-imaging,
+               rst2pdf,
+               python-pil | python-imaging | base-files (>= 11),
+               python3-pil | base-files (<< 11),
                strace,
                chrpath,
                gdb | lldb
