--- a/debian/rules
+++ b/debian/rules
@@ -7,24 +7,23 @@ export PYBUILD_NAME = nuitka
 # set PYBUILD_VERSIONS too, but it seemed that way.
 export PYBUILD_INTERPRETERS = python{version}
 
-export DEB_RELEASE = $(shell lsb_release -r -s)
-
 # Do not use Python2 for Debian 11 or higher, need to find a way for Ubuntu
 # to cover, Debian 11 inheritance.
 ifeq ($(DEB_VENDOR), "Debian")
-export BUILD_ONLY_PYTHON3=$(shell [ "$DEB_RELEASE" -ge 11 ] && echo true)
+BUILD_ONLY_PYTHON3 := $(shell [ `lsb_release -r -s` -ge 11 ] && echo true)
 else
-export BUILD_ONLY_PYTHON3=false
+BUILD_ONLY_PYTHON3 := false
 endif
+export BUILD_ONLY_PYTHON3
 
 ifeq ($(BUILD_ONLY_PYTHON3),true)
 export PYBUILD_VERSIONS = $(shell py3versions -vr)
 export BUILD_WITH_ARGUMENT = "python3"
-export RUN_TEST_OPTIONS = --no-python2.7 --no-python2.6
+export RUN_TEST_OPTIONS = "--no-python2.7 --no-python2.6"
 else
 export PYBUILD_VERSIONS = $(shell pyversions -vr) $(shell py3versions -vr)
 export BUILD_WITH_ARGUMENT = "python2,python3"
-export RUN_TEST_OPTIONS =
+export RUN_TEST_OPTIONS = ""
 endif
 
 %:
