--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: nuitka
 Maintainer: Kay Hayen <kay.hayen@gmail.com>
 Section: python
 Priority: optional
-Build-Depends: debhelper,
+Build-Depends: debhelper (>= 9),
                lsb-release,
                dh-python | base-files (<< 9.6),
                python (>= 2.6.6-2) | base-files (>= 11),
