Visual Code: Ignore distribution folders too.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "C_Cpp.dimInactiveRegions": false,
     "files.exclude": {
         "**/*.build": true,
+        "**/*.dist" : true,
         "**/*.exe": true,
         "**/*.exe.away": true,
         "**/*.bin": true,
