--- a/debian/rules
+++ b/debian/rules
@@ -21,10 +21,12 @@ ifeq ($(BUILD_ONLY_PYTHON3),true)
 export PYBUILD_VERSIONS = $(shell py3versions -vr)
 export BUILD_WITH_ARGUMENT = "python3"
 export RUN_TEST_OPTIONS = --no-python2.7 --no-python2.6
+export RUN_TEST_PYTHON = python3
 else
 export PYBUILD_VERSIONS = $(shell pyversions -vr) $(shell py3versions -vr)
 export BUILD_WITH_ARGUMENT = "python2,python3"
 export RUN_TEST_OPTIONS =
+export RUN_TEST_PYTHON = python2
 endif
 
 %:
@@ -38,4 +40,6 @@ override_dh_auto_build:
 	cp Developer_Manual.rst Developer_Manual.txt
 
 override_dh_auto_test:
-	./tests/run-tests --skip-reflection-test $(RUN_TEST_OPTIONS)
+	# The RUN_TEST_PYTHON is not the one to execute tests, just the for the
+	# test runner.
+	$(RUN_TEST_PYTHON) ./tests/run-tests --skip-reflection-test $(RUN_TEST_OPTIONS)
