--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -38,3 +38,4 @@ include tests/programs/pkgutil_usage/package/DATA_FILE.txt
 recursive-include tests/optimizations *.py
 recursive-include tests/standalone *.py
 recursive-include tests/reflected *.py
+recursive-include tests/plugins *.py
