Debian: Reverse dependencies that are not for Debian 11.

--- a/debian/control
+++ b/debian/control
@@ -5,18 +5,18 @@ Priority: optional
 Build-Depends: debhelper (>= 9),
                lsb-release,
                dh-python | base-files (<< 9.6),
-               python (>= 2.6.6-2) | base-files (>= 11),
-               python-all-dbg (>= 2.6.6-2) | base-files (>= 11),
-               python-all-dev (>= 2.6.6-2) | base-files (>= 11),
-               python-setuptools | base.files (>= 11),
+               base-files (>= 11) | python (>= 2.6.6-2),
+               base-files (>= 11) | python-all-dbg (>= 2.6.6-2),
+               base-files (>= 11) | python-all-dev (>= 2.6.6-2),
+               base-files (>= 11) | python-setuptools,
                scons,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
                python3-setuptools,
-               python-appdirs  | base-files (>= 11),
+               base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
                rst2pdf,
-               python-pil | python-imaging | base-files (>= 11),
+               base-files (>= 11) | python-pil | python-imaging,
                python3-pil | base-files (<< 11),
                strace,
                chrpath,
@@ -33,8 +33,8 @@ Architecture: all
 Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          scons (>= 2.0.0),
          python3-appdirs | base-files (<< 7.2),
-         python-dev (>= 2.6.6-2) | base-files (>= 11),
          python3-dev,
+         base-files (>= 11) | python-dev (>= 2.6.6-2),
          ${misc:Depends},
          ${python:Depends},
          ${python3:Depends}
