--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,7 +46,10 @@
         "--disable=useless-object-inheritance,useless-return,assignment-from-no-return",
         "--disable=import-outside-toplevel",
     ],
-    "python.linting.ignorePatterns" : ["tests/CPython??/test/**", "tests/syntax/**"],
-    "restructuredtext.confPath": "",
+    "python.linting.ignorePatterns": [
+        "tests/CPython??/test/**",
+        "tests/syntax/**"
+    ],
     "python.formatting.provider": "black",
+    "restructuredtext.confPath": "",
 }
