Tests: Fixup hotfix and release branches for Github actions

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,10 +10,8 @@ on:
       - develop
       - jorj
       - factory
-      - release/.*
-      - hotfix/.*
-    tags:
-      - release_.*
+      - release/**
+      - hotfix/**
 
 jobs:
   linux:
