--- a/debian/control
+++ b/debian/control
@@ -21,9 +21,9 @@ Build-Depends: debhelper (>= 9),
                strace,
                chrpath,
                gdb | lldb
-Vcs-Git: http://git.nuitka.net/Nuitka.git
-Vcs-browser: http://nuitka.net/gitweb/?p=Nuitka.git;a=summary
-Homepage: http://nuitka.net
+Vcs-Git: https://github.com/Nuitka/Nuitka.git
+Vcs-browser: https://github.com/Nuitka/Nuitka
+Homepage: https://nuitka.net
 Standards-Version: 4.4.1
 X-Python-Version: >= 2.6
 X-Python3-Version: >= 3.3
