--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -5,11 +5,13 @@ pylint == 2.6.0 ; python_version >= '3.6'
 astroid == 2.4.2 ; python_version >= '3.6'
 
 # linting rest code snippets
-Pygments == 2.4.2 ; python_version == '2.7' or python_version >= '3.6'
-doc8 == 0.8.0
+restructuredtext-lint==1.3.0 ; python_version == '2.7' or python_version >= '3.6'
+Pygments == 2.6.1 ; python_version >= '3.6'
+rstcheck == 3.3.1 ; python_version == '2.7' or python_version >= '3.6'
 
 # Autoformat needs
 black == 20.8b1 ; python_version >= '3.6'
+toml >= 0.10.1 ; python_version >= '3.6'
 isort == 5.4.2 ; python_version >= '3.6'
 redbaron == 0.9.2 ; python_version >= '2.7'
 baron == 0.9 ; python_version >= '2.7'
