Actions: Switch to downloaded MinGW64 from winlibs
* This also enables us to compile for Python3.8 on Windows finally.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,6 +45,11 @@ jobs:
         run:
           pip install .
 
+      - name: Verbose scons output in compilation
+        run: |
+          python -m nuitka --module --show-scons --run tests/basics/Empty.py
+          python -m nuitka --show-scons --run tests/basics/Empty.py
+
       - name: Run Nuitka test suite
         run: |
           python -m nuitka --version
@@ -54,7 +59,7 @@ jobs:
       - name: PyLint on Nuitka source code
         run: |
           ./bin/check-nuitka-with-pylint
-        if: matrix.python_version >= '3.7' || matrix.python_version == '2.7'
+        if: matrix.python_version == '3.7' || matrix.python_version == '2.7'
 
       - name: RestLint on Nuitka source code
         run: |
@@ -133,11 +138,6 @@ jobs:
         with:
           python-version: ${{ matrix.python_version }}
 
-      - name: Install MinGW using Conda
-        shell: bash
-        run: |
-          $CONDA/Scripts/conda install m2w64-gcc libpython ccache
-
       - name: Install Nuitka dependencies
         run: |
           pip install -r requirements-devel.txt
@@ -149,16 +149,12 @@ jobs:
       - name: Verbose scons output in compilation
         shell: bash
         run: |
-          export CC=$CONDA/Library/mingw-w64/bin/gcc.exe
-
-          python -m nuitka --module --show-scons --run tests/basics/Empty.py
-          python -m nuitka --show-scons --run tests/basics/Empty.py
+          python -m nuitka --module --show-scons --run --assume-yes-for-downloads --mingw64 tests/basics/Empty.py
+          python -m nuitka --show-scons --run --mingw64 tests/basics/Empty.py
 
       - name: Run Nuitka test suite
         shell: bash
         run: |
-          export CC=$CONDA/Library/mingw-w64/bin/gcc.exe
-
           python -m nuitka --version
           env | sort
-          python ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads
+          python ./tests/run-tests --no-other-python --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads --mingw64
