Visual Code: Also handle scons files by their short name
* This happens when I click from file names in the terminal.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "files.associations": {
         "*.tac": "python",
         "*.scons": "python",
+        "*.sco": "python",
         "*.h": "c",
         "*.c": "c",
         "typeinfo": "c"
