--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,13 +15,11 @@ on:
 
 jobs:
   linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         python_version:
             - '2.7'
-            - '3.5'
-            - '3.6'
             - '3.7'
             - '3.8'
             - '3.9'
@@ -77,7 +75,6 @@ jobs:
       matrix:
         python_version:
             - '2.7'
-            - '3.6'
             - '3.7'
             - '3.8'
             - '3.9'
@@ -124,8 +121,6 @@ jobs:
       matrix:
         python_version:
             - '2.7'
-            - '3.5'
-            - '3.6'
             - '3.7'
             - '3.8'
             - '3.9'
