Actions: May have to run "apt-get update" for Ubuntu
* It seems the runners might become out of sync with the repos
  otherwise.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Install Nuitka dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install chrpath gdb ccache
           pip install -r requirements-devel.txt
 
