--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -37,5 +37,6 @@ recursive-include tests/programs *.py
 include tests/programs/pkgutil_usage/package/DATA_FILE.txt
 recursive-include tests/optimizations *.py
 recursive-include tests/standalone *.py
+recursive-include tests/onefile *.py
 recursive-include tests/reflected *.py
 recursive-include tests/plugins *.py
