Project: Updated Github docs
* Using a markdown formatter in Visual Code now. Nothing that can be
  used in a commit hook, but that's probably not necessary.

* Describe a few do not, and pronounce the need for a reproducer more
  clearly.

* Remove duplicate description for issue raising from contributing,
  instead just point to the issue creation itself.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
         "foxundermoon.shell-format",
         "troelsdamgaard.reflow-paragraph",
         "laurenttreguier.rpm-spec",
-        "ms-vscode.cpptools"
+        "ms-vscode.cpptools",
+        "mervin.markdown-formatter"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": [
