Debian: Add recommends of libfuse2 needed for onefile mode and make ccache dependency

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Nuitka dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install chrpath gdb ccache libfuse
+          sudo apt-get install chrpath gdb ccache libfuse2
           pip install -r requirements-devel.txt
 
       - name: Install Nuitka
