--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          scons (>= 2.0.0),
          python3-appdirs | base-files (<< 7.2),
          python3-dev,
+         ccache,
          base-files (>= 11) | python-dev (>= 2.6.6-2),
          ${misc:Depends},
          ${python:Depends},
@@ -42,7 +43,7 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
 Recommends: python3-lxml,
             strace,
             chrpath,
-            ccache
+            libfuse2
 Description: Python compiler with full language support and CPython compatibility
  This Python compiler achieves full language compatibility and compiles Python
  code into compiled objects that are not second class at all. Instead they can
