Git: Ignore more file types that occur from builds

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.e4q
 *.e4s
 *.pyc
+__pycache__/
 *.pyo
 *.swp
 *.swo
@@ -13,11 +14,14 @@
 *.pyd
 *.pyi
 *.exe
+*.exe.away
 *.bin
 *.build
+*.onefile-build
 *.dist
-*.py.optimization.log
-*.py.inclusion.log
+*.key
+*.optimization.log
+*.inclusion.log
 *.strace
 .mypy_cache
 *.egg-info
@@ -27,11 +31,14 @@ tests/reflected/nuitka.py
 tests/reflected/nuitka-runner.py
 tests/basics/BigConstants.py
 tests/generated/*.py
+!tests/generated/run_all.py
+tests/PyPI-pytest/venv_*
 *.dist
 *.build
 *.dblite
 *.pdb
 releases/
+html
 man/
 htmlcov/
 Mini.py
@@ -55,6 +62,9 @@ venv_nuitka/
 .pytest_cache
 doxygen_*
 doxygen-*
+.coverage*
 *.tmp
+*.dat
 .vscode/ipch
 .vscode/tags
+.vscode/.ropeproject
