--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -1,11 +1,12 @@
 # PyLint wouldn't be installable on 2.6 and not work with too old Python3
 
-pylint == 2.6.0 ; python_version >= '3.6'
-astroid == 2.4.2 ; python_version >= '3.6'
+#pylint == 2.6.0 ; python_version >= '3.6'
+pylint == 2.7.2 ; python_version >= '3.6'
+astroid == 2.5.1 ; python_version >= '3.6'
 
 # linting rest code snippets
 restructuredtext-lint==1.3.2 ; python_version == '2.7' or python_version >= '3.6'
-Pygments == 2.7.4 ; python_version >= '3.6'
+Pygments == 2.8.1 ; python_version >= '3.6'
 rstcheck == 3.3.1 ; python_version == '2.7' or python_version >= '3.6'
 
 # Autoformat needs
@@ -22,7 +23,7 @@ doxypypy == 0.8.8.6 ; python_version >= '2.7'
 Jinja2 == 2.11.2 ; python_version >= '2.7'
 
 # For the progress bar to look nicely.
-tqdm == 4.56.0 ; python_version >= '2.7'
+tqdm == 4.59.0 ; python_version >= '2.7'
 
 # Codespell can be used as well, no need to fix version
 codespell ; python_version >= '2.7'
