Visual Code: Added extension for comment formatting
* Not sure if this is to stay, but lets try this.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,7 +10,8 @@
         "troelsdamgaard.reflow-paragraph",
         "laurenttreguier.rpm-spec",
         "ms-vscode.cpptools",
-        "mervin.markdown-formatter"
+        "mervin.markdown-formatter",
+        "stkb.rewrap"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": [
