--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -13,6 +13,7 @@ rstcheck == 3.3.1 ; python_version == '2.7' or python_version >= '3.6'
 black == 20.8b1 ; python_version >= '3.6'
 toml >= 0.10.1 ; python_version >= '3.6'
 isort == 5.8.0 ; python_version >= '3.6'
+rstfmt == 0.0.8 ; python_version >= '3.6'
 redbaron == 0.9.2 ; python_version >= '2.7'
 baron == 0.9 ; python_version >= '2.7'
 
