--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -1,6 +1,7 @@
-# PyLint wouldn't be installable on 2.6 and not work with too old Python3
+# Speed up Nuitka by having this available.
+orderedset == 2.0.3 ; python_version >= '3.4' or os.name != "nt"
 
-#pylint == 2.6.0 ; python_version >= '3.6'
+# PyLint wouldn't be installable on 2.6 and not work with too old Python3
 pylint == 2.7.2 ; python_version >= '3.6'
 astroid == 2.5.1 ; python_version >= '3.6'
 
