--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,7 @@
         "tests/syntax/**"
     ],
     "python.analysis.autoSearchPaths": false,
-    "python.analysis.extraPaths": ["nuitka/build/inline_copy/lib/scons-3.1.2"],
+    "python.analysis.extraPaths": ["nuitka/build/inline_copy/lib/scons-3.1.2", "nuitka/build/inline_copy/clcache"],
     "python.formatting.provider": "black",
     "restructuredtext.confPath": "",
 }
