Tests: Added timeout to Windows run time traces
* It seems our dependency walker usage hangs spuriously which
  we will need to control, this should make it do a timeout
  exception after 5 minutes.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ tqdm == 4.60.0
 
 # Faster OrderedSet
 orderedset == 2.0.3
+
+# More capable subprocess.
+subprocess32==3.5.4 ; python_version == '2.7'
