Onefile: Add support for compression and UI changes
* No longer are the onefile options Windows specific, but now
  they can be given on Linux too.

* Enhanced tracing for onefile to use its own logger and say
  stuff about compression. Compression is used if available.

* For now only on Python3.5 we have the ability to do this
  kind of compression, but it could be made to work with a
  slave Python process on older Python.

--- a/requirements-devel.txt
+++ b/requirements-devel.txt
@@ -41,5 +41,8 @@ virtualenv ; python_version >= '3.5'
 # Tests of PyPI packages need that usually.
 pytest; python_version == '2.7' or python_version >= '3.4'
 
+# Onefile compression
+zstandard; python_version >= '3.5'
+
 # Packaging
 wheel
