--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,11 +38,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install chrpath gdb ccache libfuse2
-          pip install -r requirements-devel.txt
+          python -m pip install -r requirements-devel.txt
 
       - name: Install Nuitka
         run:
-          pip install .
+          python -m pip install .
 
       - name: Verbose scons output in compilation
         run: |
