--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,7 +8,6 @@ on:
     branches:
       - master
       - develop
-      - jorj
       - factory
       - release/**
       - hotfix/**
@@ -128,6 +127,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: ilammy/msvc-dev-cmd@v1
+
       - name: Use Python ${{ matrix.python_version }}
         uses: actions/setup-python@v2
         with:
@@ -142,14 +143,12 @@ jobs:
           pip install .
 
       - name: Verbose scons output in compilation
-        shell: bash
         run: |
-          python -m nuitka --module --show-scons --run --assume-yes-for-downloads tests/basics/Empty.py
-          python -m nuitka --show-scons --run tests/basics/Empty.py
+          python -m nuitka --module --show-scons --run --assume-yes-for-downloads tests\basics\Empty.py
+          python -m nuitka --show-scons --run tests\basics\Empty.py
 
       - name: Run Nuitka test suite
-        shell: bash
         run: |
+          Get-ChildItem env:
           python -m nuitka --version
-          env | sort
-          python ./tests/run-tests --no-other-python --no-debug --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads
+          python .\tests\run-tests --no-other-python --no-debug --skip-reflection-test --skip-all-cpython-tests --assume-yes-for-downloads
