Actions: Use proper runner name for macOS
* Found by Visual Code extension for Github, spelling seems ignored,
  but doesn't comply the schema.

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -70,7 +70,7 @@ jobs:
         if: matrix.python_version == '3.7'
 
   mac:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         python_version:
